H3 bold fix (font weight was too fat on Safari)

--- a/join/src/app/contacts/contacts.component.scss
+++ b/join/src/app/contacts/contacts.component.scss
@@ -534,7 +534,7 @@ form {
 
 .single-contact-info-label {
   text-align: left;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .single-contact-info-value {
