--- a/join/src/styles.scss
+++ b/join/src/styles.scss
@@ -45,6 +45,10 @@ h6 {
   margin: 0;
 }
 
+h3{
+  font-weight: 500;
+}
+
 p {
   margin: 0;
 }
